--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 Mongo_url=mongodb+srv://darshanjadhav775:UAAwKyTTGByPFKwR@cluster1.zsmtq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+port=3000
